# gas_split

./: .gitignore  README.md  pyproject.toml
src/: main.py  mongo_interface.py
src/models/: trip.py
static/templates/: details.html  index.html  trip.html
